tests/testcases/02-not_enum.stderr
error: expected `enum`
 --> $DIR/02-not_enum.rs:2:1
  |
2 | struct Query1 {
  | ^^^^^^

error: expected `enum`
 --> $DIR/02-not_enum.rs:7:1
  |
7 | struct Query2(i64, char);
  | ^^^^^^
